--- a/Heart-Css/style.css
+++ b/Heart-Css/style.css
@@ -8,7 +8,6 @@
 .loader{
   height: 350px;
   width: 350px;
-  border: 1px solid black;
   position: absolute;
   margin: auto;
   top: 0;
@@ -29,15 +28,42 @@
   transform: rotate(45deg);
   border-radius: 100px 100px 10px 10px;
   transform-origin:  50% 69%;
+  animation: flip 4s linear infinite;
+}
+
+@keyframes flip{
+  25%{
+    transform: rotate(45deg) rotateX(180deg);
+  }
+  50%{
+    transform: rotate(45deg) rotateX(180deg);
+  }
+  75%{
+    transform: rotate(45deg);
+  }
 }
 
 .loader div:nth-child(2){
   height: 200px;
   width: 125px;
   position: absolute;
-  background-color: black;
+  background-color: #dd1c4b;
   top: 151px;
-  right: 132px;
+  left: 132px;
   transform: rotate(135deg);
   transform-origin: 50% 31%;
+  border-radius: 10px 10px 100px 100px;
+  animation: flip2 4s 1s linear infinite;
+
+}
+@keyframes flip2{
+  25%{
+    transform: rotate(135deg) rotateX(180deg);
+  }
+  50%{
+    transform: rotate(135deg) rotateX(180deg);
+  }
+  75%{
+    transform: rotate(135deg);
+  }
 }
