--- a/Button-Css/style.css
+++ b/Button-Css/style.css
@@ -9,4 +9,16 @@ button{
   font-family: 'Poppins', sans-serif;
   position: absolute;
   margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #17181d;
+  border: 6px solid #17fa8e;
+  color: #17fa8e;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 6px;
+  box-shadow: 20px 20px 50px rbga(0,0,0,0.5);
+  outline: none;
 }
