--- a/Pulse-Css/style.css
+++ b/Pulse-Css/style.css
@@ -9,7 +9,7 @@ body{
   background-color: #e5e5fa;
 }
 
-pulse{
+.pulse{
   height: 150px;
   width: 150px;
   background: linear-gradient(
@@ -22,4 +22,26 @@ pulse{
   right: 0;
   top: 0;
   bottom: 0;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 50px;
+  color: #ffffff;
+}
+.pulse:before,
+.pulse:after{
+  content: " ";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: #8a82fb;
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0.7;
+}
+.pulse:before{
+  animation: pulse 2s ease-out infinite;
+}
+.pulse:after{
+  animation: pulse 2s 1s ease-out infinite;
 }
