--- a/Battery-Css/style.css
+++ b/Battery-Css/style.css
@@ -32,3 +32,57 @@ body{
   top: 0;
   border-radius: 0 7px 7px 0;
 }
+.battery:after {
+  content: "";
+  position: absolute;
+  height: 80px;
+  width: 40px;
+  background-color: #ffffff;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 10px;
+  border-radius:5px;
+  box-shadow: 50px 0 transparent,
+              100px 0 transparent,
+              150px 0 transparent;
+  animation: charge 4s infinite;
+}
+
+@keyframes charge {
+  22%{
+    box-shadow: 50px 0 transparent,
+                100px 0 transparent,
+                150px 0 transparent;
+  }
+  25%{
+    box-shadow: 50px 0 #ffffff,
+                100px 0 transparent,
+                150px 0 transparent;
+  }
+  47%{
+    box-shadow: 50px 0 #ffffff,
+                100px 0 transparent,
+                150px 0 transparent;
+  }
+  50%{
+    box-shadow: 50px 0 #ffffff,
+                100px 0 #ffffff,
+                150px 0 transparent;
+  }
+  72%{
+    box-shadow: 50px 0 #ffffff,
+                100px 0 #ffffff,
+                150px 0 transparent;
+  }
+  75%{
+    box-shadow: 50px 0 #ffffff,
+                100px 0 #ffffff,
+                150px 0 #ffffff;
+  }
+  95%{
+    box-shadow: 50px 0 #ffffff,
+                100px 0 #ffffff,
+                150px 0 #ffffff;
+  }
+}
