--- a/Cards-Css/style.css
+++ b/Cards-Css/style.css
@@ -1,8 +1,15 @@
-*{
+*,
+*:before,
+*:after{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body{
-  background-color: #3a3a3a;
+  background-color: #f5f7ff;
+  font-family: 'Poppins', sans-serif;
+  color: #2c2c51;
+  height: 100vh;
+  width: 100vw;
 }
+.
