--- a/Cards-Css/style.css
+++ b/Cards-Css/style.css
@@ -11,5 +11,28 @@ body{
   color: #2c2c51;
   height: 100vh;
   width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.
+.card{
+  height: 150px;
+  width: 200px;
+  position: relative;
+}
+input[type="radio"]{
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  border-radius:10px;
+  position: absolute;
+  box-shadow: 7px 7px 15px rgba(2, 28, 53, 0.08);
+}
+input[type="radio"]:before{
+  content: " ";
+  position: absolute;
+  height: 22px;
+  width: 22px;
+}
