--- a/Cards-Css/style.css
+++ b/Cards-Css/style.css
@@ -1,49 +1,49 @@
 *,
 *:before,
-*:after{
+*:after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-body{
+body {
   background-color: #f5f7ff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #2c2c51;
   height: 100vh;
   width: 100vw;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
-.card{
+.card {
   height: 150px;
   width: 200px;
   position: relative;
 }
-input[type="radio"]{
+input[type="radio"] {
   -webkit-appearance: none;
   appearance: none;
   background-color: white;
   height: 100%;
   width: 100%;
-  border-radius:10px;
+  border-radius: 10px;
   position: absolute;
   box-shadow: 7px 7px 15px rgba(2, 28, 53, 0.08);
   cursor: pointer;
   outline: none;
 }
-input[type="radio"]:before{
+input[type="radio"]:before {
   content: " ";
   position: absolute;
   height: 22px;
   width: 22px;
-  background-color:#f9fafd;
+  background-color: #f9fafd;
   border: 1px solid #e2e6f3;
   border-radius: 50%;
   top: 35px;
   right: 20px;
 }
-input[type="radio"]:after{
+input[type="radio"]:after {
   content: "";
   position: absolute;
   height: 13px;
@@ -53,25 +53,31 @@ input[type="radio"]:after{
   top: 39.5px;
   right: 24.5px;
 }
-label{
+label {
   position: absolute;
   margin: 20px;
   cursor: pointer;
 }
-h5{
+h5 {
   font-weight: 600;
   font-size: 18px;
   letter-spacing: 0.5px;
   margin: 15px 0 20px 0;
 }
-h2{
+h2 {
   font-size: 28px;
 }
-span{
+span {
   font-weight: 400;
   font-size: 18px;
   color: #7b7b93;
 }
-input[type="radio"]:hover{
+input[type="radio"]:hover {
   transform: scale(1.05);
+}
+input[type="radio"]:checked {
+  border: 3px solid #478bfb;
+}
+input[type="radio"]:checked:after {
+  background-color: #478bfb;
 }
