--- a/ClockGlassmorphism-Css/style.css
+++ b/ClockGlassmorphism-Css/style.css
@@ -17,8 +17,12 @@ body{
   left: 0;
   backdrop-filter: blur(20px);
   border-radius: 50%;
-  border: 2px solid rgba(255,255,255,0.25);
+  border: 2px solid rgba(255,255,255,0.1);
+  box-shadow: 30px 30px 35px rgba(0,0,0,0.25);
 }
 img{
   opacity: 0.6;
+}
+.hand{
+  position: absolute;
 }
