--- a/ClockGlassmorphism-Css/style.css
+++ b/ClockGlassmorphism-Css/style.css
@@ -25,4 +25,25 @@ img{
 }
 .hand{
   position: absolute;
+  background-color: rgba(255,255,255,0.2);
+  backdrop-filter:blur(20px);
+  margin: auto;
+  left: 0;
+  right: 0;
+  border-radius: 5px;
+}
+.hour{
+  height: 60px;
+  width: 10px;
+  top: 100px;
+}
+.minute{
+  height: 80px;
+  width: 5px;
+  top: 80px;
+}
+.seconds{
+  height: 90px;
+  width: 3px;
+  top: 70px;
 }
