--- a/WeatherGlassmorphism-Css/style.css
+++ b/WeatherGlassmorphism-Css/style.css
@@ -54,4 +54,18 @@ h1{
   width: 70%;
   margin-left: 15%;
   display: grid;
+  grid-template-columns: auto auto;
+  margin-top: 30px;
+}
+.details{
+  text-align: center;
+  font-size: 13px;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+.details span{
+  color: #b3b3b3;
+}
+.details:first-child{
+  border-right: 2px solid #fcfcfc;
 }
