--- a/TriangleHeader-Css/style.css
+++ b/TriangleHeader-Css/style.css
@@ -6,13 +6,33 @@
   box-sizing: border-box;
 }
 body{
-
+  font-family: 'Poppins', sans-serif;
 }
 header{
   width: 100vw;
   height: 92vh;
-  background: url(background.jpg);
+  background: linear-gradient(
+    to right,
+    rgba(255,0,204,0.6),
+    rgba(51, 51,154,0.6)
+  )
+  url(background.jpg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
+  clip-path: polygon(
+    0 0,
+    100% 80%,
+    50% 100%,
+    0 80%
+  );
+  position: relative;
+}
+header .text-container{
+  display: block;
+  width: 100%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
