--- a/TriangleHeader-Css/style.css
+++ b/TriangleHeader-Css/style.css
@@ -35,4 +35,7 @@ header .text-container{
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  text-align: center;
+  color: #fff;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
