--- a/MultipleBorders-Css/style.css
+++ b/MultipleBorders-Css/style.css
@@ -21,4 +21,8 @@ div{
               0 0 0 45px #0c80e3,
               0 0 0 60px #0c4e8b
   ;
+  display: grid;
+  place-items: center;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 2px;
 }
