--- a/MultipleBorders-Css/style.css
+++ b/MultipleBorders-Css/style.css
@@ -10,7 +10,7 @@ div{
   height: 160px;
   width: 250px;
   position: absolute;
-  background-color: black;
+  background-color: #ffffff;
   margin: auto;
   top: 0;
   left: 0;
@@ -24,5 +24,6 @@ div{
   display: grid;
   place-items: center;
   font-family: 'Poppins', sans-serif;
+  font-weight: 600;
   letter-spacing: 2px;
 }
