--- a/AuroraGradient-Css/style.css
+++ b/AuroraGradient-Css/style.css
@@ -8,16 +8,17 @@
 .container{
   height: 500px;
   width: 500px;
-  border: 1px solid black;
   position: absolute;
   margin: auto;
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
+  overflow: hidden;
 }
 .container div{
   position: absolute;
+  border-radius: 50%;
 }
 .container div:nth-child(1){
   height: 90%;
