--- a/ProfileCard-Css/style.css
+++ b/ProfileCard-Css/style.css
@@ -23,3 +23,30 @@ body{
   box-shadow: 20px 20px 22px rgba(0,0,0,0.2);
   font-family: 'Poppins', sans-serif;
 }
+.card-img{
+  height: 120px;
+  width: 120px;
+  background-color: rgba(255, 255, 255, 0.06);
+  backdrop-filter: blur(20px);
+  position: absolute;
+  margin: 30px auto 30px auto;
+  left: 0;
+  right: 0;
+  border-radius: 50%;
+}
+.card-img img{
+  height: 86%;
+  border-radius: 50%;
+  margin-left: 7%;
+  margin-top: 7%;
+}
+.desc{
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 160px;
+}
+.primary-text{
+  color: #d5d5d5;
+  font-size: 16px;
+}
