--- a/ProfileCard-Css/style.css
+++ b/ProfileCard-Css/style.css
@@ -49,4 +49,39 @@ body{
 .primary-text{
   color: #d5d5d5;
   font-size: 16px;
+  font-weight: 600px;
+  letter-spacing: 0.7px;
+  margin: 5px 0; 
+}
+.secondary-text{
+  color: #c0c0c0;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin: 5px 0; 
+}
+.details{
+  display: grid;
+  width: 100%;
+  height: 70px;
+  grid-template-columns: auto auto;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(255, 255, 255,0.06);
+  backdrop-filter: blur(20px);
+  border-radius: 0 0 8px 8px;
+  padding: 5px 0;
+}
+.details>div{
+  text-align: center;
+}
+.details>div:first-child{
+  border-right: 2px solid rgba(255, 255, 255, 0.08);
+}
+button{
+  background-color:rgba(255, 255, 255, 0.06);
+  position: absolute;
+  width: 80%;
+  left: 10%;
+  border: none;
 }
