--- a/ProfileCard-Css/style.css
+++ b/ProfileCard-Css/style.css
@@ -80,8 +80,17 @@ body{
 }
 button{
   background-color:rgba(255, 255, 255, 0.06);
+  backdrop-filter: blur(20px);
   position: absolute;
   width: 80%;
   left: 10%;
+  top: 240px;
   border: none;
+  border-radius: 5px;
+  padding: 15px 0; 
+}
+button:hover{
+  background-color: rgba(255, 255, 255, 0.12);
+  color: white;
+  cursor: pointer;
 }
