--- a/HTMLButton-Css/style.css
+++ b/HTMLButton-Css/style.css
@@ -5,3 +5,26 @@
   margin: 0;
   box-sizing: border-box;
 }
+a{
+  display: block;
+  height: 80px;
+  width: 250px;
+  background: linear-gradient(
+    #9365ff,
+    #6f3bff
+  );
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  place-items: center;
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 500;
+  text-decoration: none;
+  letter-spacing: 3px;
+  border-radius: 5px;
+}
