--- a/ClockDigitalGlassmorphism-Css/style.css
+++ b/ClockDigitalGlassmorphism-Css/style.css
@@ -10,7 +10,6 @@ body{
 }
 .container{
   width: 450px;
-  border: 1px solid #ffffff;
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
@@ -26,6 +25,7 @@ body{
   padding: 50px 25px;
   border: 1.5px solid rgba(255,255,255,0.06);
   box-shadow: 0 25px 30px rgba(0,0,0,0.15);
+  backdrop-filter: blur(15px);
 }
 #day{
   position: relative;
@@ -37,3 +37,40 @@ body{
 .wrapper{
   text-align: center;
 }
+#time{
+  font-size: 70px;
+  display: inline-block;
+}
+#midday{
+  display: inline-block;
+  font-size: 30px;
+}
+.shape1{
+  height: 250px;
+  width: 250px;
+  position: absolute;
+  background: linear-gradient(
+    45deg,
+    #ff5b84,
+    #eb3461
+  );
+  border-radius: 50%;
+  z-index: -1;
+  bottom: 100px;
+  right: -100px;
+}
+.shape2{
+  height: 250px;
+  width: 250px;
+  position: absolute;
+  background: linear-gradient(
+    135deg,
+    #426cf8,
+    #3ebdf0
+  );
+  border-radius: 50%;
+  z-index: -1;
+  top: 100px;
+  left: -100px;
+}
+
