--- a/PokemonCardGenerator/style.css
+++ b/PokemonCardGenerator/style.css
@@ -6,9 +6,45 @@
 }
 
 body {
-  background-color: #eff3ff;
+  background-color: #cbcfdd;
 }
 
 .container {
-  
+  width: 350px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+#card {
+  position: relative;
+  background: radial-gradient(
+    circle at 50% 0%, 
+    orange 36%, 
+    #ffffff 36%
+  );
+  width: 100%;
+  padding: 30px 20px;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+}
+#card img{
+  display: block;
+  width: 180px;
+  max-height: 280px;
+  position: relative;
+  margin: 20px auto;
+}
+.hp {
+  width: 80px;
+  background-color: #ffffff;
+  text-align: center;
+  padding: 8px 0;
+  border-radius: 30px;
+  margin-left: auto;
+  font-weight: 400;
+}
+.poke-name{
+  text-align: center;
+  font-weight: 600;
 }
