--- a/PokemonCardGenerator/style.css
+++ b/PokemonCardGenerator/style.css
@@ -42,37 +42,41 @@ body {
   margin-left: auto;
   font-weight: 400;
 }
-.poke-name{
+.poke-name {
   text-align: center;
   font-weight: 600;
 }
-.types{
+.types {
   display: flex;
   justify-content: space-around;
   margin: 20px 0 40px 0;
 }
 .hp span,
-.types span{
+.types span {
   font-size: 12px;
   letter-spacing: 0.4px;
   font-weight: 600;
 }
-.types span{
+.types span {
 
 }
-.stats{
+.stats {
   display: flex;
   align-items: center;
   justify-content: space-between;
   text-align: center;
 }
-.stats p{
+.stats p {
   color: #404060;
 }
-#btn{
+#btn {
   display: block;
   padding: 15px 60px;
   font-size: 18px;
   background-color: #101010;
   color: #ffffff;
+  position: relative;
+  margin: 30px auto;
+  border: none;
+  border-radius: 5px;
 }
