--- a/PokemonCardGenerator/style.css
+++ b/PokemonCardGenerator/style.css
@@ -16,11 +16,6 @@ body {
 }
 #card {
   position: relative;
-  background: radial-gradient(
-    circle at 50% 0%, 
-    orange 36%, 
-    #ffffff 36%
-  );
   width: 100%;
   padding: 30px 20px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
@@ -58,7 +53,7 @@ body {
   font-weight: 600;
 }
 .types span {
-
+  padding: 5px 20px;
 }
 .stats {
   display: flex;
