--- a/RainbowUnderlineHover/style.css
+++ b/RainbowUnderlineHover/style.css
@@ -34,4 +34,10 @@ a{
     #3363ff,
     #b102b7
   );
+  background-size: 200% 100%;
+  bottom: -0.1em;
+  transition: 1.5s;
+}
+a:hover:before{
+  background-position: 100% 0;
 }
