--- a/RainbowUnderlineHover/style.css
+++ b/RainbowUnderlineHover/style.css
@@ -13,7 +13,7 @@ body{
   justify-content: center;
 }
 a{
-  font-size: 20;
+  font-size: 100px;
   position: relative;
   text-decoration: none;
   font-family: "Poppins", sans-serif;
