--- a/ImageSlideshow/style.css
+++ b/ImageSlideshow/style.css
@@ -6,3 +6,17 @@
 body {
   background-color: #7aacff;
 }
+.container{
+  width: 85vmin;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  border: 20px solid #ffffff;
+  border-radius: 8px;
+}
+.wrapper{
+  width: 100%;
+  display: flex;
+}
