--- a/RandomHexCodeGenerator/style.css
+++ b/RandomHexCodeGenerator/style.css
@@ -18,7 +18,6 @@ body{
   top: 50%;
   left: 50%;
   font-size: 3vmin;
-  display: grid;
   border-radius: 10px;
 }
 #output-color{
@@ -27,5 +26,22 @@ body{
   width: 30vmin;
   border: 0.5em solid #f5f5f5 !important;
   border-radius: 50%;
-  
+  margin: auto;
+  display: grid;
+  place-items: center;
+}
+#output-color span{
+  display: block;
+  width: calc( 100% - 20px);
+  height: calc( 100% - 20px);
+  background-color: palegreen;
+  border-radius: 50%;
+}
+input[type="text"]{
+  width: 100%;
+  background-color: transparent;
+  border: 2.5px dashed #f5f5f5;
+  font-size: 1.3em;
+  padding: 0.8em 0;
+  margin-top: 1em;
 }
