--- a/RandomHexCodeGenerator/style.css
+++ b/RandomHexCodeGenerator/style.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  border: none !important;
+  border: none;
   outline: none;
   font-family: "Roboto Mono", monospace;
 }
@@ -43,5 +43,38 @@ input[type="text"]{
   border: 2.5px dashed #f5f5f5;
   font-size: 1.3em;
   padding: 0.8em 0;
-  margin-top: 1em;
+  margin: 1em;
+  color: #f5f5f5;
+  text-align: center;
+}
+.btns{
+  display: flex;
+  justify-content: space-around;
+}
+.btns button{
+  font-size: 1em;
+  padding: 0.8em 1.7em;
+  border-radius: 7px;
+  font-weight: 600;
+  cursor:pointer;
+}
+#gen-btn{
+  background-color: #18f98f;
+  color: #202229;
+}
+#copy-btn{
+  border: 3px solid #18f98f;
+  background-color:transparent;
+  color: #18f98f;
+}
+.custom-alert{
+  background-color: rgba(255,255,255,0.3);
+  font-size: 2.5vmin;
+  padding: 1em 1.5em;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  color: #f5f5f5;
+  transition: 0.5s;
+  transform: translateX( calc(100% + 10px) );
 }
