--- a/RandomHexCodeGenerator/style.css
+++ b/RandomHexCodeGenerator/style.css
@@ -37,6 +37,17 @@ body{
   background-color: palegreen;
   border-radius: 50%;
 }
+.show-color{
+  animation: pop 0.8s;
+}
+@keyframes pop {
+  0%{
+    transform: scale(0);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
 input[type="text"]{
   width: 100%;
   background-color: transparent;
