--- a/CalculatorWeb/style.css
+++ b/CalculatorWeb/style.css
@@ -32,3 +32,31 @@ body {
   color: #ffffff;
   font-size: 35px;
 }
+.display input::placeholder{
+  color: #9490ac;
+}
+.buttons{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-top: 40px;
+}
+.buttons input[type="button"]{
+  font-size: 20px;
+  padding: 17px;
+  border: none;
+  background-color: transparent;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.buttons input[type="button"]:hover{
+  box-shadow: 0 8px 25px #000d2e;
+}
+input[type="button"]#equal{
+  grid-row: span 2;
+  background-color: #f9544c;
+}
+input[type="button"][value="0"]{
+  grid-column: span 2;
+}
