--- a/style copy.css
+++ b/style copy.css
@@ -38,31 +38,30 @@ ul {
 	list-style-type: none;
 	padding: 0;
 }
-
 ul li {
-	background-color: #fff;
-	box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.15);
-	margin: 20px;
+  margin: 20px;
 	width: 350px;
+  height: 50px;
+	background-color: #fff;
+	box-shadow: 0px 4px 40px 0px rgba(255, 255, 255, 0.15);
+	
+  text-align: center;
+  padding: 15px 0;
 }
-
 ul li a {
 	color: #000;
 	text-decoration: none;
+  font-family: 'Popins', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 0.5px;
 }
-
 ul li img {
-	display: block;
+  display: block;
 	object-fit: cover;
 	margin-bottom: 15px;
-	transition: transform 0.3s ease;
-	height: 200px;
-	width: 350px;
-}
-
-ul li p {
-	font-weight: bold;
-	padding: 0 15px;
+  height: 250px;
+  width: 350px;
 }
 footer {
   margin: 40px;
