--- a/RandomHexCodeGenerator/style.css
+++ b/RandomHexCodeGenerator/style.css
@@ -53,7 +53,7 @@ input[type="text"]{
   border: 2.5px dashed #f5f5f5;
   font-size: 1.3em;
   padding: 0.8em 0;
-  margin: 1em;
+  margin: 1em 0;
   color: #f5f5f5;
   text-align: center;
 }
