--- a/FingerprintScannerCss/style.css
+++ b/FingerprintScannerCss/style.css
@@ -27,3 +27,43 @@ body{
   background: url(fingerPrint_01.png);
   background-size: 300px;
 }
+.scan .fingerprint::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(fingerPrint_02.png);
+  background-size: 300px;
+  animation: animate 4s ease-in-out infinite;
+}
+@keyframes animate{
+  0%, 100%{
+    height: 0%
+  }
+  50%{
+    height: 100%
+  }
+}
+.scan .fingerprint:after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background: #3fefef;
+  border-radius: 8px;
+  filter: drop-shadow(0 0 20px #3fefef) drop-shadow(0 0 60px #3fefef);
+  animation: animate_line 4s ease-in-out infinite;
+}
+
+@keyframes animate_line{
+  0%, 100%{
+    left: 0%
+  }
+  50%{
+    top: 100%
+  }
+}
