--- a/FingerprintScannerCss/style.css
+++ b/FingerprintScannerCss/style.css
@@ -67,3 +67,11 @@ body{
     top: 100%
   }
 }
+
+.scan h3 {
+  text-transform: uppercase;
+  font-size: 2em;
+  letter-spacing: 2px;
+  margin-top: 20px;
+  color: #3fefef;
+}
