--- a/FingerprintScannerCss/style.css
+++ b/FingerprintScannerCss/style.css
@@ -74,4 +74,15 @@ body{
   letter-spacing: 2px;
   margin-top: 20px;
   color: #3fefef;
+  filter: drop-shadow(0 0 20px #3fefef) drop-shadow(0 0 60px #3fefef);
+  animation: animate_text 1s steps(1) infinite;
+}
+
+@keyframes animate_text{
+  0%, 100%{
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
 }
