--- a/LoadingButton-Css/style.css
+++ b/LoadingButton-Css/style.css
@@ -8,3 +8,56 @@
 *{
   box-sizing: border-box;
 }
+
+body{
+  height: 100vh;
+  margin: 0;
+  display: grid;
+  place-items: center;
+  background-color: var(--body-color);
+}
+
+.button_loader{
+  border: none;
+  outline: none;
+  position: relative;
+  padding: 1.25rem 2.5rem;
+  background-color: var(--frist-color);
+  color: var(--text-color);
+  font-size: 1rem;
+  font-family: 'Popins', sans-serif;
+  border-radius: .5rem;
+  box-shadow: 0 18px 40px hsla(231, 56%, 56%, .3);
+  overflow: hidden;
+  cursor: wait;
+}
+
+.button_loader::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 150%;
+  height: 100%;
+  background: repeating-linear-gradient(
+              60deg,
+              transparent,
+              transparent .75rem,
+              var(--frist-color-alt) .75rem,
+              var(--frist-color-alt) 1.5rem
+  );
+  animation: load 1s infinite linear;
+}
+
+.button_text{
+  position: relative;
+}
+
+@keyframes load{
+  0%{
+    transform: translateX(0);
+  }
+  100%{
+    transform: translateX(-1.75rem);
+  }
+}
